🐛 fix(high contrast): high contrast styles fix for button and dropdown.

--- a/packages/assets/css/src/scss/_components/_navigation/_elements/_navigation-container.scss
+++ b/packages/assets/css/src/scss/_components/_navigation/_elements/_navigation-container.scss
@@ -51,6 +51,16 @@
 	@include sui-class($rtl: false, $theme: dark) {
 		@include block($block) {
 			border: $border-width-sm solid $color-extended-neutral-0;
+
+			.sui-dropdown__popover {
+				.sui-dropdown__menu-item {
+					color: $color-extended-neutral-0;
+
+					&.sui-dropdown__menu-item--hover {
+						color: $color-extended-neutral-100;
+					}
+				}
+			}
 		}
 	}
 }
